fix: implement expiry on right place
